--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 	<title>CLP</title>
 	<style type="text/css">
 		/*.deepLink {display: none;}*/
+		#deeplinkTest {display: none;}
 	</style>
 </head>
 <body>
 	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907">deep link</a>
+
+	<iframe src="" id="deeplinkTest"></iframe>
 
 	<script src="deep-link.js" type="text/javascript"></script>
 
