--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>CLP</title>
 	<style type="text/css">
 		/*.deepLink {display: none;}*/
-		#deeplinkTest {display: block; width: 100%; height: 500px;}
+		#deeplinkTest {display: block; width: 100%; height: 500px;background: #000000;}
 	</style>
 </head>
 <body>
