--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			// console.log(document.getElementById("deepLink").getAttribute('data-app'));
 
-			// document.getElementById("deepLink").click();
+			document.getElementById("deepLink").click();
 		});
 	</script>
 </body>
