--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
 
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
-			// var deepLink = document.getElementById("deepLink").getAttribute('data-app'),
-			// 	path = window.location.href.split("?");
-
-			// if (path.length > 1) {
-			// 	deepLink += '?' + path[1];
-			// }
-
-			// document.getElementById("deepLink").setAttribute('data-app', deepLink);
-
-			// console.log(document.getElementById("deepLink").getAttribute('data-app'));
-
-			document.getElementById("deepLink").click();
+			setTimeout(function(){document.getElementById("deepLink").click();}, 2000);
 		});
 	</script>
 </body>
