--- a/index.html
+++ b/index.html
@@ -14,17 +14,11 @@
 	<script src="deep-link.js" type="text/javascript"></script>
 
 	<script>
-		document.addEventListener('DOMContentLoaded', function() {
-			var deepLink = document.getElementById("deepLink").getAttribute('data-app'),
-				path = window.location.href.split("?");
+		// document.addEventListener('DOMContentLoaded', function() {
+		// 	document.getElementById("deepLink").click();
+		// });
 
-			if (path.length > 1) {
-				deepLink += '?' + path[1];
-			}
-
-			window.location = deepLink;
-			// document.getElementById("deepLink").click();
-		});
+		document.getElementById("deepLink").click();
 	</script>
 </body>
 </html>
