--- a/index.html
+++ b/index.html
@@ -8,17 +8,38 @@
 		/*.deepLink {display: none;}*/
 	</style>
 </head>
-<body>
+<body onload="checkCookie()">
 	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907">deep link</a>
 
 	<script src="deep-link.js" type="text/javascript"></script>
 
 	<script>
-		// document.addEventListener('DOMContentLoaded', function() {
-		// 	document.getElementById("deepLink").click();
-		// });
+		function getCookie(cname) {
+		    var name = cname + "=";
+		    var decodedCookie = decodeURIComponent(document.cookie);
+		    var ca = decodedCookie.split(';');
+		    for(var i = 0; i < ca.length; i++) {
+		        var c = ca[i];
+		        while (c.charAt(0) == ' ') {
+		            c = c.substring(1);
+		        }
+		        if (c.indexOf(name) == 0) {
+		            return c.substring(name.length, c.length);
+		        }
+		    }
+		    return "";
+		}
 
-		document.getElementById("deepLink").click();
+		function checkCookie() {
+		    var reload=getCookie("deeplinkReload");
+		    if (reload == 'true') {
+				document.cookie = "deeplinkReload=false";
+		        document.getElementById("deepLink").click();
+		    } else {
+		    	document.cookie = "deeplinkReload=true";
+		    	location.reload();
+		    }
+		}
 	</script>
 </body>
 </html>
