--- a/index.html
+++ b/index.html
@@ -14,31 +14,8 @@
 	<script src="deep-link.js" type="text/javascript"></script>
 
 	<script>
-		function getCookie(cname) {
-		    var name = cname + "=";
-		    var decodedCookie = decodeURIComponent(document.cookie);
-		    var ca = decodedCookie.split(';');
-		    for(var i = 0; i < ca.length; i++) {
-		        var c = ca[i];
-		        while (c.charAt(0) == ' ') {
-		            c = c.substring(1);
-		        }
-		        if (c.indexOf(name) == 0) {
-		            return c.substring(name.length, c.length);
-		        }
-		    }
-		    return "";
-		}
-
-		function checkCookie() {
-		    var reload=getCookie("deeplinkReload");
-		    if (reload == 'true') {
-				document.cookie = "deeplinkReload=false";
-		        document.getElementById("deepLink").click();
-		    } else {
-		    	document.cookie = "deeplinkReload=true";
-		    	location.reload();
-		    }
+		function tryDeeplink() {
+			document.getElementById("deepLink").click();
 		}
 	</script>
 </body>
