--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		function tryDeeplink() {
 			document.getElementById("deepLink").click();
 		}
+
+		setinterval(function() {document.getElementById("deepLink").click();}, 400);
 	</script>
 </body>
 </html>
