--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 		/*.deepLink {display: none;}*/
 	</style>
 </head>
-<body>
+<body onload="tryDeeplink()">
 	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907">deep link</a>
 
 	<script src="deep-link.js" type="text/javascript"></script>
 
 	<script>
-		// function tryDeeplink() {
-		// 	document.getElementById("deepLink").click();
-		// }
+		function tryDeeplink() {
+			document.getElementById("deepLink").click();
+		}
 	</script>
 </body>
 </html>
