--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<script>
 		function tryDeeplink() {
-			document.getElementById("deepLink").click();
+			setTimeout(function(){document.getElementById("deepLink").click();}, 10000);
 		}
 	</script>
 </body>
