--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</style>
 </head>
 <body>
-	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907">deep link</a>
+	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907">test</a>
 
 	<script src="deep-link.js" type="text/javascript"></script>
 
@@ -33,10 +33,13 @@
 			if(navigator.userAgent.match(/Android/i)) {
 				var test = 'intent://scan/#Intent;scheme='+deepLink+';package='+com.cherrypicks.clp+';S.browser_fallback_url=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.cherrypicks.clp;end';
 				document.getElementById("deepLink").setAttribute('href', test);
+
+				window.location = test;
 			} else if (navigator.userAgent.match(/iPhone|iPad|iPod/i)){
 				document.getElementById("deepLink").setAttribute('href', deepLink);
+
+				document.getElementById("deepLink").click();
 			}
-			document.getElementById("deepLink").click();
 		});
 	</script>
 </body>
