--- a/banner.html
+++ b/banner.html
@@ -5,6 +5,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<a href="index.html"><img src="banner_dummy.jpg" alt="" /></a>
+	<a href="index.html?section=landing"><img src="banner_dummy.jpg" alt="" /></a>
 </body>
 </html>
