--- a/index.html
+++ b/index.html
@@ -9,30 +9,22 @@
 	</style>
 </head>
 <body>
-	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907">test</a>
+	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907?mt=8">deep link</a>
 
 	<script src="deep-link.js" type="text/javascript"></script>
 
 	<script>
-		function ready(fn) {
-		  if (document.attachEvent ? document.readyState === "complete" : document.readyState !== "loading"){
-		    fn();
-		  } else {
-		    document.addEventListener('DOMContentLoaded', fn);
-		  }
-		}
+		document.addEventListener('DOMContentLoaded', function() {
+			var deepLink = document.getElementById("deepLink").getAttribute('data-app'),
+				path = window.location.href.split("?");
 
-		ready(function() {
-				var deepLink = document.getElementById("deepLink").getAttribute('data-app'),
-					path = window.location.href.split("?");
-
-				if (path.length > 1) {
-					deepLink += '?' + path[1];
-				}
-
-			if(navigator.userAgent.match(/Android/i) || navigator.userAgent.match(/iPhone|iPad|iPod/i)) {
-				document.getElementById("deepLink").setAttribute('href', deepLink);
+			if (path.length > 1) {
+				deepLink += '?' + path[1];
 			}
+
+			document.getElementById("deepLink").setAttribute('data-app', deepLink);
+
+			// console.log(document.getElementById("deepLink").getAttribute('data-app'));
 
 			document.getElementById("deepLink").click();
 		});
