--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 	<title>CLP</title>
 	<style type="text/css">
-		.deepLink {display: none;}
+		/*.deepLink {display: none;}*/
 	</style>
 </head>
 <body>
