--- a/banner.html
+++ b/banner.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 	<a href="index.html?section=landing"><img src="banner_dummy.jpg" alt="" /></a>
+
+	<a href="index.html?section=landing" target="_blank">target="_blank"</a>
 </body>
 </html>
