--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			// console.log(document.getElementById("deepLink").getAttribute('data-app'));
 
-			document.getElementById("deepLink").click();
+			setTimeout(function() {document.getElementById("deepLink").click();},1000);
 		});
 	</script>
 </body>
