--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907?mt=8">deep link</a>
+	<a id="smartshopping" class="deepLink" href="https://store.clp.com.hk/shoppings/index.jsp" data-app="clphk://external.deeplink">smart shopping</a>
 
 	<script src="deep-link.js" type="text/javascript"></script>
 
@@ -18,7 +19,8 @@
 			var deepLink = document.getElementById("deepLink").getAttribute('data-app'),
 				path = window.location.href.split("?"),
 				parameters,
-				parametersArr = {};
+				parametersArr = {},
+				deeplinkId = 'deepLink';
 
 			if (path.length > 1) {
 				deepLink += '?' + path[1].replace(/ /g, "").replace(/%20/g, "");
@@ -31,20 +33,18 @@
 				}
 
 				if (parametersArr.section === 'smartshopping') {
-					document.getElementById("deepLink").removeAttribute('data-store-android');
-					document.getElementById("deepLink").removeAttribute('data-store-ios');
-					document.getElementById("deepLink").setAttribute('href', 'https://store.clp.com.hk/shoppings/index.jsp');
+					deeplinkId = 'smartshopping';
 				}
 
 				console.log(deepLink);
 			}
 
-			document.getElementById("deepLink").setAttribute('data-app', deepLink);
+			document.getElementById(deeplinkId).setAttribute('data-app', deepLink);
 
 			// console.log(document.getElementById("deepLink").getAttribute('data-app'));
 
-			if (navigator.userAgent.match(/Android/i)) setTimeout(function() {document.getElementById("deepLink").click();},500);
-			else document.getElementById("deepLink").click();
+			if (navigator.userAgent.match(/Android/i)) setTimeout(function() {document.getElementById(deeplinkId).click();},500);
+			else document.getElementById(deeplinkId).click();
 		});
 	</script>
 </body>
