--- a/index.html
+++ b/index.html
@@ -5,46 +5,29 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 	<title>CLP</title>
 	<style type="text/css">
-		.deepLink {display: none;}
+		/*.deepLink {display: none;}*/
 	</style>
 </head>
 <body>
 	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907?mt=8">deep link</a>
-	<a id="smartshopping" class="deepLink" href="https://store.clp.com.hk/shoppings/index.jsp" data-app="clphk://external.deeplink">smart shopping</a>
 
 	<script src="deep-link.js" type="text/javascript"></script>
 
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
 			var deepLink = document.getElementById("deepLink").getAttribute('data-app'),
-				path = window.location.href.split("?"),
-				parameters,
-				parametersArr = {},
-				deeplinkId = 'deepLink';
+				path = window.location.href.split("?");
 
 			if (path.length > 1) {
-				deepLink += '?' + path[1].replace(/ /g, "").replace(/%20/g, "");
-				parameters = path[1].split('&');
-
-				for (var i = 0; i < parameters.length; i++) {
-					parameters[i] = parameters[i].split('=');
-
-					parametersArr[parameters[i][0]] = parameters[i][1];
-				}
-
-				if (parametersArr.section === 'smartshopping') {
-					deeplinkId = 'smartshopping';
-				}
-
-				console.log(deepLink);
+				deepLink += '?' + path[1];
 			}
 
-			document.getElementById(deeplinkId).setAttribute('data-app', deepLink);
+			document.getElementById("deepLink").setAttribute('data-app', deepLink);
 
 			// console.log(document.getElementById("deepLink").getAttribute('data-app'));
 
-			if (navigator.userAgent.match(/Android/i)) setTimeout(function() {document.getElementById(deeplinkId).click();},500);
-			else document.getElementById(deeplinkId).click();
+			if (navigator.userAgent.match(/Android/i)) setTimeout(function() {document.getElementById("deepLink").click();},500);
+			else document.getElementById("deepLink").click();
 		});
 	</script>
 </body>
