--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907?mt=8">deep link</a>
+	
+	<a id="smartshopping" class="deepLink" href="https://store.clp.com.hk/shoppings/index.jsp" data-app="clphk://external.deeplink">smart shopping</a>
 
 	<script src="deep-link.js" type="text/javascript"></script>
 
