--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 			// console.log(document.getElementById("deepLink").getAttribute('data-app'));
 
-			if (navigator.userAgent.match(/Android/i)) setTimeout(function() {document.getElementById("deepLink").click();},500);
-			else document.getElementById("deepLink").click();
+			// if (navigator.userAgent.match(/Android/i)) setTimeout(function() {document.getElementById("deepLink").click();},500);
+			// else document.getElementById("deepLink").click();
 		});
 	</script>
 </body>
