--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 					console.log('smartshopping');
 					document.getElementById("deepLink").removeAttribute('data-store-android');
 					document.getElementById("deepLink").removeAttribute('data-store-ios');
+					document.getElementById("deepLink").setAttribute('href', 'https://store.clp.com.hk/shoppings/index.jsp');
 				}
 			}
 
