--- a/smartBanner/index.html
+++ b/smartBanner/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="apple-itunes-app" content="app-id=450725907">
+    <meta name="apple-itunes-app" content="app-id=450725907, app-argument=clphk://external.deeplink?section=smartshopping">
     <meta name="google-play-app" content="app-id=com.cherrypicks.clp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
