--- a/index.html
+++ b/index.html
@@ -1,41 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-	<title>CLP</title>
-	<style type="text/css">
-		/*.deepLink {display: none;}*/
-	</style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Microsoft Tiles -->
+    <meta name="msapplication-config" content="browserconfig.xml">
+
+    <meta name="description" content="HTML5 template with Gulp.js" />
+    <meta name="keywords" content="html5, template, gulp" />
+    <meta name="author" content="Chris Chan" />
+    <meta name="copyright" content="Chris Chan" />
+
+    <!-- Share Information-->
+    <!-- for Facebook & LinkedIn -->
+    <meta property="og:title" content="HTML5 Template" />
+    <meta property="og:description" content="HTML5 template with Gulp.js" />
+    <meta property="og:image" content="" />
+    <meta property="og:url" content="" />
+    <!-- for Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta property="twitter:title" content="HTML5 Template" />
+    <meta property="twitter:description" content="HTML5 template with Gulp.js" />
+    <meta property="twitter:image" content="" />
+
+    <!-- disable telephone number detection -->
+    <meta name="format-detection" content="telephone=no">
+    <!-- disable date detection -->
+    <meta name="format-detection" content="date=no">
+    <!-- disable address detection -->
+    <meta name="format-detection" content="address=no">
+    <!-- disable email detection -->
+    <meta name="format-detection" content="email=no">
+
+    <title>HTML5 Template</title>
+
+    <!-- Standard favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- style -->
+    <link rel="stylesheet" type="text/css" href="/assets/styles/style.css" />
+
 </head>
+
 <body>
-	<a id="deepLink" class="deepLink" href="https://services.clp.com.hk/download.html" data-app="clphk://external.deeplink" data-store-android="com.cherrypicks.clp" data-store-ios="clp-hong-kong/id450725907?mt=8">deep link</a>
 
-	<script src="deep-link.js" type="text/javascript"></script>
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId: '306204143496041',
+                autoLogAppEvents: true,
+                xfbml: true,
+                version: 'v3.1'
+            });
+        };
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
 
-	<script>
-		document.addEventListener('DOMContentLoaded', function() {
-			var deepLink = document.getElementById("deepLink").getAttribute('data-app'),
-				path = window.location.href.split("?");
+    <!-- .innerWrapper -->
+    <div class="innerWrapper">
+        <h1>HTML5 Template</h1>
 
-			if (path.length > 1) {
-				deepLink += '?' + path[1];
+        <p>HTML5 template with
+            <a href="https://gulpjs.com/" target="_blank">Gulp.js</a>
+        </p>
 
-				if (path[1].search('section=smartshopping') !== -1) {
-					console.log('smartshopping');
-					document.getElementById("deepLink").removeAttribute('data-store-android');
-					document.getElementById("deepLink").removeAttribute('data-store-ios');
-					document.getElementById("deepLink").setAttribute('href', 'https://store.clp.com.hk/shoppings/index.jsp');
-				}
-			}
+        <p>
+            <strong>Development tools:</strong>
+        </p>
 
-			document.getElementById("deepLink").setAttribute('data-app', deepLink);
+        <ul>
+            <li>
+                <a href="https://babeljs.io/" target="_blank">Babel</a>
+            </li>
+            <li>
+                <a href="http://sass-lang.com/" target="_blank">SCSS</a>
+            </li>
+            <li>
+                <a href="https://mozilla.github.io/nunjucks/" target="_blank">Nunjucks</a>
+            </li>
+        </ul>
 
-			// console.log(document.getElementById("deepLink").getAttribute('data-app'));
+        <div class="fb-share-button" data-layout="button">
+        </div>
 
-			if (navigator.userAgent.match(/Android/i)) setTimeout(function() {document.getElementById("deepLink").click();},500);
-			else document.getElementById("deepLink").click();
-		});
-	</script>
+        <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button">
+        </div>
+
+        <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count">
+        </div>
+
+        <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="box_count">
+        </div>
+
+        <button class="fb-share-custom">Share</button>
+
+        <div data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="small" data-mobile-iframe="true">
+            <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a>
+        </div>
+    </div>
+
+    <!-- scripts -->
+
+    <script type="text/javascript" src="/assets/js/test.js"></script>
+
 </body>
+
 </html>
