test - social media

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <a href="https://chrispschan.github.io/index.html" class="socialMedia" data-type="wechat">wechat</a>
 
-        <a href="https://chrispschan.github.io/index.html" class="socialMedia" data-type="wechat">whatsapp</a>
+        <a href="https://chrispschan.github.io/index.html" class="socialMedia" data-type="whatsapp">whatsapp</a>
 
     </div>
 
