--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="Shortcode">
     <meta property="og:description" content="Shortcode">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://chrispschan.github.io/favicon-32x32.png">
     <meta property="og:url" content="">
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary">
@@ -77,6 +77,8 @@
             </div>
             <div class="demo__wrapper">
                 <h1>Shortcode</h1>
+                
+                <a href="whatsapp://send?text=https://chrispschan.github.io/index.html">Test</a>
 
                 <div class="demo__group" data-demo-key="map" id="map">
                     <h2>Map</h2>
