--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="Shortcode">
     <meta property="og:description" content="Shortcode">
-    <meta property="og:image" content="https://chrispschan.github.io/favicon-32x32.png">
+    <meta property="og:image" content="https://chrispschan.github.io/coast-228x228.png">
     <meta property="og:url" content="">
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary">
