--- a/index.html
+++ b/index.html
@@ -26,15 +26,12 @@
         <meta expr:content='Shortcode' property='og:title'/>
         <meta content='article' property='og:type'/>
     </b:if>
-    <b:if cond='data:blog.postImageUrl'>
+    <b:if cond='https://chrispschan.github.io/coast-228x228.png'>
         <meta expr:content='https://chrispschan.github.io/coast-228x228.png' property='og:image'/>
     <b:else/>
-    <b:if cond='data:blog.postImageThumbnailUrl'>
+    <b:if cond='https://chrispschan.github.io/coast-228x228.png'>
         <meta expr:content='https://chrispschan.github.io/coast-228x228.png' property='og:image'/>
     </b:if></b:if>
-    <b:if cond='data:blog.metaDescription != ""'>
-        <meta expr:content='Shortcode' name='og:description'/>
-    </b:if>
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="">
