--- a/index.html
+++ b/index.html
@@ -19,19 +19,8 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="Shortcode">
     <meta property="og:description" content="Shortcode">
-    <meta property="og:image" content="https://chrispschan.github.io/coast-228x228.png">
+    <meta property="og:image" content="https://chrispschan.github.io/mstile-310x310.png">
     <meta property="og:url" content="">
-    
-<b:if cond='data:blog.pageType == "item"'>
-        <meta expr:content='Shortcode' property='og:title'/>
-        <meta content='article' property='og:type'/>
-    </b:if>
-    <b:if cond='https://chrispschan.github.io/coast-228x228.png'>
-        <meta expr:content='https://chrispschan.github.io/coast-228x228.png' property='og:image'/>
-    <b:else/>
-    <b:if cond='https://chrispschan.github.io/coast-228x228.png'>
-        <meta expr:content='https://chrispschan.github.io/coast-228x228.png' property='og:image'/>
-    </b:if></b:if>
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="">
