--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="Shortcode">
     <meta property="og:description" content="Shortcode">
-    <meta property="og:image" content="https://chrispschan.github.io/mstile-310x310.png">
+    <meta property="og:image" itemprop="image" content="https://chrispschan.github.io/mstile-310x310.png">
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="">
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary">
