--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- .innerWrapper -->
     <div class="innerWrapper">
 
-                <a href="whatsapp://send?text=https://chrispschan.github.io/index.html">Test</a>
+                <a href="whatsapp://send?text=https://chrispschan.github.io/index.html">Test whatsapp</a>
 
     </div>
 
