--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta property="og:title" content="Shortcode">
     <meta property="og:description" content="Shortcode">
     <meta property="og:image" itemprop="image" content="https://chrispschan.github.io/mstile-310x310.png">
+    <meta name="thumbnail" content="https://chrispschan.github.io/mstile-310x310.png">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="">
     <!-- for Twitter -->
@@ -61,7 +62,7 @@
     <!-- .innerWrapper -->
     <div class="innerWrapper">
 
-                <a href="whatsapp://send?text=https://chrispschan.github.io/index.html">Test whatsapp</a>
+                <a href="whatsapp://send?text=https://chrispschan.github.io/index.html">Test whatsapp 2</a>
 
     </div>
 
