--- a/index.html
+++ b/index.html
@@ -19,18 +19,10 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="Shortcode">
     <meta property="og:description" content="Shortcode">
-    <meta property="og:image" itemprop="image" content="https://chrispschan.github.io/mstile-310x310.png">
-    <meta name="thumbnail" content="https://chrispschan.github.io/mstile-310x310.png">
+    <meta property="og:image" content="https://p2.bahamut.com.tw/B/2KU/33/599b9c0474a88af237f5c317e212qbd5.JPG?v=1540493119">
+    <meta name="thumbnail" content="https://p2.bahamut.com.tw/B/2KU/33/599b9c0474a88af237f5c317e212qbd5.JPG?v=1540493119">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="">
-    <!-- for Twitter -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="">
-    <meta name="twitter:creator" content="">
-    <meta name="twitter:title" content="Shortcode">
-    <meta name="twitter:description" content="Shortcode">
-    <meta name="twitter:image" content="">
-    <meta name="twitter:image:alt" content="">
+    <meta property="og:url" content="https://chrispschan.github.io/index.html">
 
     <!-- disable telephone number detection -->
     <meta name="format-detection" content="telephone=no">
