--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="Shortcode">
     <meta property="og:description" content="Shortcode">
-    <meta property="og:image" content="https://p2.bahamut.com.tw/B/2KU/33/599b9c0474a88af237f5c317e212qbd5.JPG?v=1540493119">
-    <meta name="thumbnail" content="https://p2.bahamut.com.tw/B/2KU/33/599b9c0474a88af237f5c317e212qbd5.JPG?v=1540493119">
+    <meta property="og:image" content="https://chrispschan.github.io/mstile-310x310.png">
+    <meta name="thumbnail" content="https://chrispschan.github.io/mstile-310x310.png">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://chrispschan.github.io/index.html">
 
@@ -54,7 +54,7 @@
     <!-- .innerWrapper -->
     <div class="innerWrapper">
 
-                <a href="whatsapp://send?text=https://chrispschan.github.io/index.html">Test whatsapp 3</a>
+                <a href="whatsapp://send?text=https://chrispschan.github.io/index.html">Test whatsapp 4</a>
 
     </div>
 
