--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
 </head>
 
 <body>
+    <div style="display:none;"><img src="/mstile-310x310.png" /></div>
     <!-- .innerWrapper -->
     <div class="innerWrapper">
 
-                <a href="whatsapp://send?text=https://chrispschan.github.io/index.html">Test whatsapp 4</a>
+                <a href="whatsapp://send?text=https://chrispschan.github.io/index.html">Test whatsapp</a>
 
     </div>
 
