--- a/index.html
+++ b/index.html
@@ -2,27 +2,32 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Microsoft Tiles -->
     <meta name="msapplication-config" content="browserconfig.xml">
 
-    <meta name="description" content="Shortcode">
-    <meta name="keywords" content="shortcode">
-    <meta name="author" content="Chris Chan">
-    <meta name="copyright" content="Chris Chan">
+    <meta name="description" content="HTML5 template with Gulp.js" />
+    <meta name="keywords" content="html5, template, gulp" />
+    <meta name="author" content="Chris Chan" />
+    <meta name="copyright" content="Chris Chan" />
 
     <!-- Share Information-->
     <!-- for Facebook & LinkedIn -->
-    <meta property="og:title" content="Shortcode">
-    <meta property="og:description" content="Shortcode">
-    <meta property="og:image" content="https://chrispschan.github.io/mstile-310x310.png">
-    <meta name="thumbnail" content="https://chrispschan.github.io/mstile-310x310.png">
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://chrispschan.github.io/index.html">
+    <meta property="og:title" content="HTML5 Template" />
+    <meta property="og:description" content="HTML5 template with Gulp.js" />
+    <meta property="og:image" content="" />
+    <meta property="og:url" content="" />
+    <!-- for Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:creator" content="" />
+    <meta name="twitter:title" content="HTML5 Template" />
+    <meta name="twitter:description" content="HTML5 template with Gulp.js" />
+    <meta name="twitter:image" content="" />
+    <meta name="twitter:image:alt" content="" />
 
     <!-- disable telephone number detection -->
     <meta name="format-detection" content="telephone=no">
@@ -33,7 +38,7 @@
     <!-- disable email detection -->
     <meta name="format-detection" content="email=no">
 
-    <title>Shortcode</title>
+    <title>HTML5 Template</title>
 
     <!-- Standard favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -45,24 +50,19 @@
     <link rel="canonical" href="/index.html">
 
     <!-- style -->
-    <link rel="stylesheet" type="text/css" href="/styles/shortcode.css">
-    <link rel="stylesheet" type="text/css" href="/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
 
 </head>
 
-<body>
-    <div style="display:none;"><img src="/mstile-310x310.png" /></div>
+<body style="height: 100%;">
     <!-- .innerWrapper -->
     <div class="innerWrapper">
-
-                <a href="whatsapp://send?text=https://chrispschan.github.io/index.html">Test whatsapp</a>
-
+        <a href="https://wa.me/?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" target="_blank" class="deepLink" data-deep-link="whatsapp://send?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" data-android-id="com.whatsapp" data-ios-id="310633997">Whatsapp Deeplink</a>
     </div>
 
     <!-- scripts -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDWiNjmhLiH5KHrqKQL-mNN9gZ0GpzZvM"></script>
+
     <script type="text/javascript" src="/js/babel.js"></script>
-    <script type="text/javascript" src="/js/shortcode.js"></script>
 
 </body>
 
