--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="HTML5 Template" />
     <meta property="og:description" content="HTML5 template with Gulp.js" />
-    <meta property="og:image" content="https://github.com/chrispschan/html5-template/banner.png" />
-    <meta name="thumbnail" content="https://github.com/chrispschan/html5-template/banner.png" />
-    <meta property="og:type" content="article" />
+    <meta property="og:image" content="https://github.com/chrispschan/banner.png" />
+    <meta name="thumbnail" content="https://github.com/chrispschan/banner.png" />
     <meta property="og:url" content="" />
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
