--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta property="og:description" content="HTML5 template with Gulp.js" />
     <meta property="og:image" content="https://chrispschan.github.io/banner.png" />
     <meta name="thumbnail" content="https://chrispschan.github.io/banner.png" />
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="" />
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
