--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="HTML5 Template" />
     <meta property="og:description" content="HTML5 template with Gulp.js" />
-    <meta property="og:image" content="https://chrispschan.github.io/banner.png" />
+    <meta property="og:image" content="https://p2.bahamut.com.tw/B/2KU/65/bece92a44ac24a60e56ea98a1e18j4x5.JPG" />
     <meta name="thumbnail" content="https://p2.bahamut.com.tw/B/2KU/65/bece92a44ac24a60e56ea98a1e18j4x5.JPG" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="" />
