--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <meta property="og:title" content="HTML5 Template" />
     <meta property="og:description" content="HTML5 template with Gulp.js" />
     <meta property="og:image" content="https://chrispschan.github.io/coast-228x228.png" />
-    <meta name="thumbnail" content="https://chrispschan.github.io/coast-228x228.png" />
-    <meta property="og:type" content="article" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="" />
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
