--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="HTML5 template with Gulp.js" />
     <meta property="og:image" content="https://chrispschan.github.io/coast-228x228.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://chrispschan.github.io" />
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="" />
