--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="HTML5 Template" />
     <meta property="og:description" content="HTML5 template with Gulp.js" />
-    <meta property="og:image" content="https://chrispschan.github.io/coast-228x228.png" />
+    <meta property="og:image" itemprop="image" content="https://chrispschan.github.io/coast-228x228.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://chrispschan.github.io" />
+    <meta property="og:url" content="" />
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="" />
