--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 </head>
 
 <body style="height: 100%;">
+    <link itemprop="thumbnailUrl" href="https://chrispschan.github.io/coast-228x228.png"> 
+
+<span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> 
+      <link itemprop="url" href="https://chrispschan.github.io/coast-228x228.png"> 
+</span>
     <!-- .innerWrapper -->
     <div class="innerWrapper">
         <a href="https://wa.me/?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" target="_blank" class="deepLink" data-deep-link="whatsapp://send?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" data-android-id="com.whatsapp" data-ios-id="310633997">Whatsapp Deeplink</a>
