--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="HTML5 Template" />
     <meta property="og:description" content="HTML5 template with Gulp.js" />
-    <meta property="og:image" content="https://chrispschan.github.io/coast-228x228.png">
+    <meta property="og:image"itemprop="image"  content="https://chrispschan.github.io/coast-228x228.png">
 <meta name="thumbnail" content="https://chrispschan.github.io/coast-228x228.png">
 <meta property="og:url" content="https://chrispschan.github.io">
 <meta property="og:type" content="article">
