--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <meta property="og:title" content="HTML5 Template" />
     <meta property="og:description" content="HTML5 template with Gulp.js" />
     <meta property="og:image"itemprop="image"  content="https://chrispschan.github.io/coast-228x228.png">
-<meta name="thumbnail" content="https://chrispschan.github.io/coast-228x228.png">
-<meta property="og:url" content="https://chrispschan.github.io">
-<meta property="og:type" content="article">
+<meta content="https://chrispschan.github.io/coast-228x228.png">
+<meta property="og:url" content="">
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="" />
@@ -57,11 +56,7 @@
 </head>
 
 <body style="height: 100%;">
-    <link itemprop="thumbnailUrl" href="https://chrispschan.github.io/coast-228x228.png"> 
-
-<span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> 
-      <link itemprop="url" href="https://chrispschan.github.io/coast-228x228.png"> 
-</span>
+    <link itemprop="thumbnailUrl" href="https://chrispschan.github.io/coast-228x228.png"> <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> <link itemprop="url" href="https://chrispschan.github.io/coast-228x228.png"> </span>
     <!-- .innerWrapper -->
     <div class="innerWrapper">
         <a href="https://wa.me/?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" target="_blank" class="deepLink" data-deep-link="whatsapp://send?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" data-android-id="com.whatsapp" data-ios-id="310633997">Whatsapp Deeplink</a>
