--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="HTML5 Template" />
     <meta property="og:description" content="HTML5 template with Gulp.js" />
-    <meta property="og:image" itemprop="image"  content="https://chrispschan.github.io/hero__bg.jpg" />
-<meta property="og:url" content="">
+    <!-- Image to display -->
+<!-- Replace   «example.com/image01.jpg» with your own -->
+<meta property="og:image" content="http://www.example.com/image01.jpg">
+
+<!-- No need to change anything here -->
+<meta property="og:type" content="website" />
+<meta property="og:image:type" content="image/jpeg">
+
+<!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
+<meta property="og:image:width" content="300">
+<meta property="og:image:height" content="300">
+
+<!-- Website to visit when clicked in fb or WhatsApp-->
+<meta property="og:url" content="http://www.example.com">
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="" />
