--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="HTML5 template with Gulp.js" />
     <!-- Image to display -->
 <!-- Replace   «example.com/image01.jpg» with your own -->
-<meta property="og:image" content="http://www.example.com/image01.jpg">
+<meta property="og:image" content="https://chrispschan.github.io/hero__bg.jpg">
 
 <!-- No need to change anything here -->
 <meta property="og:type" content="website" />
