--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <meta property="og:description" content="HTML5 template with Gulp.js" />
     <!-- Image to display -->
 <!-- Replace   «example.com/image01.jpg» with your own -->
-<meta property="og:image" content="https://chrispschan.github.io/hero__bg.jpg">
+<meta property="og:image" content="https://chrispschan.github.io/mstile-310x310.png">
 
 <!-- No need to change anything here -->
 <meta property="og:type" content="website" />
-<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:type" content="image/png">
 
 <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
-<meta property="og:image:width" content="300">
-<meta property="og:image:height" content="300">
+<meta property="og:image:width" content="310">
+<meta property="og:image:height" content="310">
 
 <!-- Website to visit when clicked in fb or WhatsApp-->
-<meta property="og:url" content="http://www.example.com">
+<meta property="og:url" content="">
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="" />
@@ -67,7 +67,6 @@
 </head>
 
 <body style="height: 100%;">
-    <link itemprop="thumbnailUrl" href="https://chrispschan.github.io/hero__bg.jpg"> <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> <link itemprop="url" href="https://chrispschan.github.io/hero__bg.jpg"> </span>
     <!-- .innerWrapper -->
     <div class="innerWrapper">
         <a href="https://wa.me/?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" target="_blank" class="deepLink" data-deep-link="whatsapp://send?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" data-android-id="com.whatsapp" data-ios-id="310633997">Whatsapp Deeplink</a>
