--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
 <meta property="og:image" content="https://chrispschan.github.io/mstile-310x310.png">
 
 <!-- No need to change anything here -->
-<meta property="og:type" content="website" />
-<meta property="og:image:type" content="image/png">
+<<meta property=”og:type” content=”article” />
 
 <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
 <meta property="og:image:width" content="310">
 <meta property="og:image:height" content="310">
 
 <!-- Website to visit when clicked in fb or WhatsApp-->
-<meta property="og:url" content="">
+<meta property="og:url" content="https://chrispschan.github.io" />
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="" />
@@ -67,6 +66,7 @@
 </head>
 
 <body style="height: 100%;">
+    <img src=”https://chrispschan.github.io/mstile-310x310.png”/>
     <!-- .innerWrapper -->
     <div class="innerWrapper">
         <a href="https://wa.me/?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" target="_blank" class="deepLink" data-deep-link="whatsapp://send?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" data-android-id="com.whatsapp" data-ios-id="310633997">Whatsapp Deeplink</a>
