--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     <meta name="author" content="Chris Chan" />
     <meta name="copyright" content="Chris Chan" />
 
-    <!-- Share Information-->
+    <!-- Share Information--><!-- for Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:creator" content="" />
+    <meta name="twitter:title" content="HTML5 Template" />
+    <meta name="twitter:description" content="HTML5 template with Gulp.js" />
     <!-- for Facebook & LinkedIn -->
     <meta property="og:title" content="HTML5 Template" />
     <meta property="og:description" content="HTML5 template with Gulp.js" />
@@ -23,16 +28,11 @@
 
 <!-- No need to change anything here -->
 <meta property="og:type" content="article" />
-<meta property="og:image" content=""/>
+<meta property="og:image" content="https://chrispschan.github.io/mstile-310x310.png"/>
 
 <!-- Website to visit when clicked in fb or WhatsApp-->
 <meta property="og:url" content="" />
-    <!-- for Twitter -->
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="" />
-    <meta name="twitter:creator" content="" />
-    <meta name="twitter:title" content="HTML5 Template" />
-    <meta name="twitter:description" content="HTML5 template with Gulp.js" />
+    
 
     <!-- disable telephone number detection -->
     <meta name="format-detection" content="telephone=no">
@@ -60,7 +60,6 @@
 </head>
 
 <body style="height: 100%;">
-    <img src="https://chrispschan.github.io/mstile-310x310.png"/>
     <!-- .innerWrapper -->
     <div class="innerWrapper">
         <a href="https://wa.me/?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" target="_blank" class="deepLink" data-deep-link="whatsapp://send?text=https%3a%2f%2fgithub.com%2fchrispschan%2fhtml5-template" data-android-id="com.whatsapp" data-ios-id="310633997">Whatsapp Deeplink</a>
