--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <!-- No need to change anything here -->
 <meta property="og:type" content="article" />
-<meta property="og:image" content="https://chrispschan.github.io/mstile-310x310.png"/>
+<meta property="og:image" content="https://chrispschan.github.io/banner.png"/>
 
 <!-- Website to visit when clicked in fb or WhatsApp-->
 <meta property="og:url" content="" />
