--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <!-- Website to visit when clicked in fb or WhatsApp-->
 <meta property="og:url" content="" />
     
+    <meta name="twitter:image" content="https://chrispschan.github.io/hero__bg.jpg" />
 
     <!-- disable telephone number detection -->
     <meta name="format-detection" content="telephone=no">
