--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
 <!-- No need to change anything here -->
 <meta property="og:type" content="article" />
-<meta property="og:image" content="https://chrispschan.github.io/hero__bg.jpg"/>
+<meta property="og:image" content="https://chrispschan.github.io/coast-310x310.png"/>
 
 <!-- Website to visit when clicked in fb or WhatsApp-->
 <meta property="og:url" content="" />
     
-    <meta name="twitter:image" content="https://chrispschan.github.io/hero__bg.jpg" />
+    <meta name="twitter:image" content="https://chrispschan.github.io/coast-310x310.png" />
 
     <!-- disable telephone number detection -->
     <meta name="format-detection" content="telephone=no">
